.vitepress/theme/custom.css
/* ... */
:root {
  --bg-100: hsl(var(--_gray-20));
  --bg-200: hsl(var(--_gray-40));
  --bg-300: hsl(var(--_gray-50));
  --bg-400: hsl(var(--_gray-80));
  --border-100: hsl(var(--_gray-810) / 0.15);
  --border-200: hsl(var(--_gray-810) / 0.15);
  --border-300: hsl(var(--_gray-810) / 0.15);
  --fg-100: hsl(var(--_gray-860));
  --fg-200: hsl(var(--_gray-700));
  --fg-300: hsl(var(--_gray-700));
}

.dark {
  --bg-100: hsl(var(--_gray-860));
  --bg-200: hsl(var(--_gray-840));
  --bg-300: hsl(var(--_gray-800));
  --bg-400: hsl(var(--_gray-750));
  --border-100: hsl(var(--_gray-100) / 0.15);
  --border-200: hsl(var(--_gray-100) / 0.15);
  --border-300: hsl(var(--_gray-100) / 0.15);
  --fg-100: hsl(var(--_gray-20));
  --fg-200: hsl(var(--_gray-200));
  --fg-300: hsl(var(--_gray-200));
}

:root {
  --vp-c-gray-1: hsl(var(--_gray-300));
  --vp-c-gray-2: hsl(var(--_gray-200));
  --vp-c-gray-3: hsl(var(--_gray-100));
  --vp-c-gray-soft: hsl(var(--_gray-300) / 0.15);

  --vp-c-indigo-1: hsl(var(--_blue-500));
  --vp-c-indigo-2: hsl(var(--_blue-400));
  --vp-c-indigo-3: hsl(var(--_blue-300));
  --vp-c-indigo-soft: hsl(var(--_blue-500) / 0.15);

  --vp-c-purple-1: hsl(var(--_violet-500));
  --vp-c-purple-2: hsl(var(--_violet-400));
  --vp-c-purple-3: hsl(var(--_violet-300));
  --vp-c-purple-soft: hsl(var(--_violet-500) / 0.15);

  --vp-c-green-1: hsl(var(--_green-500));
  --vp-c-green-2: hsl(var(--_green-400));
  --vp-c-green-3: hsl(var(--_green-300));
  --vp-c-green-soft: hsl(var(--_green-500) / 0.15);

  --vp-c-yellow-1: hsl(var(--_yellow-500));
  --vp-c-yellow-2: hsl(var(--_yellow-400));
  --vp-c-yellow-3: hsl(var(--_yellow-300));
  --vp-c-yellow-soft: hsl(var(--_yellow-500) / 0.15);

  --vp-c-red-1: hsl(var(--_red-500));
  --vp-c-red-2: hsl(var(--_red-400));
  --vp-c-red-3: hsl(var(--_red-300));
  --vp-c-red-soft: hsl(var(--_red-500) / 0.15);

  --vp-c-bg: var(--bg-100);
  --vp-c-bg-alt: var(--bg-200);
  --vp-c-bg-elv: var(--bg-300);
  --vp-c-bg-soft: var(--bg-400);

  --vp-c-border: var(--border-100);
  --vp-c-divider: var(--border-200);
  --vp-c-gutter: var(--border-300);

  --vp-c-text-1: var(--fg-100);
  --vp-c-text-2: var(--fg-200);
  --vp-c-text-3: var(--fg-300);
}

.dark {
  --vp-c-gray-1: hsl(var(--_gray-500));
  --vp-c-gray-2: hsl(var(--_gray-600));
  --vp-c-gray-3: hsl(var(--_gray-700));
  --vp-c-gray-soft: hsl(var(--_gray-500) / 0.15);

  --vp-c-indigo-1: hsl(var(--_blue-200));
  --vp-c-indigo-2: hsl(var(--_blue-300));
  --vp-c-indigo-3: hsl(var(--_blue-400));
  --vp-c-indigo-soft: hsl(var(--_blue-200) / 0.15);

  --vp-c-purple-1: hsl(var(--_violet-200));
  --vp-c-purple-2: hsl(var(--_violet-300));
  --vp-c-purple-3: hsl(var(--_violet-400));
  --vp-c-purple-soft: hsl(var(--_violet-200) / 0.15);

  --vp-c-green-1: hsl(var(--_green-200));
  --vp-c-green-2: hsl(var(--_green-300));
  --vp-c-green-3: hsl(var(--_green-400));
  --vp-c-green-soft: hsl(var(--_green-200) / 0.15);

  --vp-c-yellow-1: hsl(var(--_yellow-200));
  --vp-c-yellow-2: hsl(var(--_yellow-300));
  --vp-c-yellow-3: hsl(var(--_yellow-400));
  --vp-c-yellow-soft: hsl(var(--_yellow-200) / 0.15);

  --vp-c-red-1: hsl(var(--_red-200));
  --vp-c-red-2: hsl(var(--_red-300));
  --vp-c-red-3: hsl(var(--_red-400));
  --vp-c-red-soft: hsl(var(--_red-200) / 0.15);
}

:root {
  --vp-c-brand-1: hsl(var(--_brand-clay));
  --vp-c-brand-2: hsl(var(--_brand-clay));
  --vp-c-brand-3: hsl(var(--_brand-clay-emphasized));
  --vp-c-brand-soft: hsl(var(--_brand-clay) / 0.15);
}

* {
  border-radius: 0 !important;
}

.VPNavBar {
  background-color: var(--vp-c-bg);
}

.VPNavBar:not(.has-sidebar) {
  border-bottom: 1px solid var(--vp-c-gutter);
}

.VPNavBar:not(.has-sidebar) .divider {
  display: none;
}

.VPHome {
  margin-bottom: 32px;
}

.VPHome .vp-doc.container {
  margin-top: 24px;
  margin-bottom: 24px;
}

/* prettier-ignore */
.VPHome .VPHero {
  position: relative;
  overflow: hidden;
  background-image:
    linear-gradient(90deg, var(--vp-c-bg-elv) 1px, #0000 1px),
    linear-gradient(var(--vp-c-bg-elv) 1px, #0000 1px);
  background-size: 16px 16px;
  background-color: var(--vp-c-bg-alt);
  border-bottom: 1px solid var(--vp-c-border);
}

.VPHome .VPHero .container {
  position: relative;
  z-index: 1;
}

.hero-lottie-bg {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  aspect-ratio: 1;
  pointer-events: none;
  z-index: 0;
  opacity: 0.12;
}

.hero-lottie-bg svg {
  height: 100%;
  width: auto;
  display: block;
}

.VPHero {
  padding: calc(var(--vp-nav-height) + var(--vp-layout-top-height, 0px) + 48px) 24px 32px !important;
}

@media (min-width: 640px) {
  .VPHero {
    padding: calc(var(--vp-nav-height) + var(--vp-layout-top-height, 0px) + 48px) 48px 32px !important;
  }
}

@media (min-width: 960px) {
    .VPHero {
        padding: calc(var(--vp-nav-height) + var(--vp-layout-top-height, 0px) + 48px) 64px 32px !important;
    }
}

.VPHome .VPHero .name {
  font-family: var(--vp-font-family-mono);
  font-size: 32px;
  font-weight: 600;
  line-height: 40px;
  letter-spacing: -0.05em;
  word-spacing: -0.3em;
  color: var(--vp-c-text-1);
  -webkit-text-fill-color: var(--vp-c-text-1);
}

.VPHome .VPHero .tagline {
  padding-top: 16px;
}

.VPHome .VPHero .hello {
  font-family: var(--vp-font-family-mono);
  font-size: 14px;
  line-height: 1.2;
  letter-spacing: 0;
  display: flex;
  color: var(--vp-c-text-1);
}

.VPHome .VPHero .hello::before {
  content: "❯";
  display: inline-flex;
  justify-content: center;
  width: 8px;
  margin-right: 16px;
}

.VPHome .VPHero .thinking {
  padding-top: 8px;
  font-family: var(--vp-font-family-mono);
  font-size: 14px;
  line-height: 1.2;
  letter-spacing: 0;
  display: flex;
  color: var(--vp-c-brand-1);
}

.VPHome .VPHero .thinking::before {
  content: "";
  display: inline-flex;
  justify-content: center;
  width: 8px;
  animation: flower 1.44s steps(1) infinite;
  margin-right: 16px;
  color: var(--vp-c-brand-1);
}
/* ... */

